--- a/package.json
+++ b/package.json
@@ -5,5 +5,21 @@
   "repository": "git@github.com:zephraph/multi-brand-design-system-example.git",
   "author": "Zephraph <zephraph@gmail.com>",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@types/react": "^16.8.10",
+    "@types/react-dom": "^16.8.3",
+    "@types/styled-components": "^4.1.12",
+    "@types/styled-system": "^4.0.0",
+    "styled-components": "^4.2.0",
+    "ts-loader": "^5.3.3",
+    "typescript": "^3.4.1",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0"
+  },
+  "dependencies": {
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "styled-system": "^4.1.0"
+  }
 }
